# networking-game-prototype

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  clear.sh  run.sh  todo.md
application/: #application.hpp#  application.cpp  application.hpp
core/: example.json  main.cpp
core/backend/: backend.cpp  backend.hpp  glfw_integration.cpp  glfw_integration.hpp
core/common/: animation.hpp  enums.hpp  object.hpp
core/editor/: editor.cpp  editor.hpp
core/libs/: glad.c  glad.h  molson.h
core/math/: delta.cpp  delta.hpp  lerp.cpp  lerp.hpp
core/networking/: client.cpp  networking.cpp  networking.h  packet.cpp  server.cpp
core/physics/: collision.cpp  collision.hpp
core/renderer/: renderer.cpp  renderer.hpp
core/res/shaders/: object.frag  object.vert  single_colour.frag
core/utils/: input.cpp  input.hpp  log.cpp  log.hpp  os.cpp  os.hpp  resource_manager.cpp  resource_manager.hpp  singleton.hpp
